--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,120 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="netflix-dark">
     <ion-title>
-      Tab 1
+      <img class="logo-header" src="/assets/netflix-logo.png" alt="" srcset="">
     </ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon slot="icon-only" name="tv-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <img src="/assets/bright-netflix.jpg" alt="" srcset="" class="img-intro">
+  <ion-button color="netflix-dark" expand="block">Regarder maintenant</ion-button>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <p class="box-title">Ma liste</p>
+
+  <div class="scroll-box">
+    <div class="movie">
+      <img (click)="openMovie('tt0450259')" src="/assets/tt0450259.jpg">
+    </div>
+
+    <div class="movie">
+      <img  (click)="openMovie('tt0473445')" src="/assets/tt0473445.jpg">
+    </div>
+
+    <div class="movie">
+      <img (click)="openMovie('tt0416449')" src="/assets/tt0416449.jpg">
+    </div>
+
+    <div class="movie">
+      <img (click)="openMovie('*')" src="/assets/MV5BMjMxNjY2MDU1OV5BMl5BanBnXkFtZTgwNzY1MTUwNTM@._V1_UY209_CR0,0,140,209_AL_.jpg">
+    </div>
+
+    <div class="movie">
+      <img (click)="openMovie('*')"  src="/assets/MV5BMjQ0MTgyNjAxMV5BMl5BanBnXkFtZTgwNjUzMDkyODE@._V1_UY209_CR0,0,140,209_AL_.jpg">
+    </div>
+
+    <div class="movie">
+      <img (click)="openMovie('*')" src="/assets/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_UY209_CR0,0,140,209_AL_.jpg">
+    </div>
+
+    <div class="movie">
+      <img (click)="openMovie('*')" src="/assets/MV5BMTMzMTc3MjA5NF5BMl5BanBnXkFtZTcwOTk3MDE5MQ@@._V1_UY209_CR1,0,140,209_AL_.jpg">
+    </div>
+
+    <div class="movie">
+      <img (click)="openMovie('*')" src="/assets/MV5BM2IxMjFmNWEtNmEyNS00MmNmLTk5ZWYtYTY5YTA1NjgwNDFmXkEyXkFqcGdeQXVyMzY0MTE3NzU@._V1_UY209_CR3,0,140,209_AL_.jpg">
+    </div>
+
+  </div>
+
+  <p class="box-title">Sélectionné pour vous</p>
+
+  <div class="scroll-box">
+    <div class="movie">
+      <img (click)="openMovie('*')" src="/assets/MV5BZTNkZmU0ZWQtZjQzMy00YTNmLWFmN2MtZGNkMmU1OThmMGYwXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_UX140_CR0,0,140,209_AL_.jpg">
+    </div>
+
+    <div class="movie">
+      <img (click)="openMovie('*')" src="/assets/MV5BZDVjN2FkYTQtNTBlOC00MjM5LTgzMWEtZWRlNGUyYmNiOTFiXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_UX140_CR0,0,140,209_AL_.jpg">
+    </div>
+
+    <div class="movie">
+      <img (click)="openMovie('*')" src="/assets/MV5BZDMxOGZhNWYtMzRlYy00Mzk5LWJjMjEtNmQ4NDU4M2QxM2UzXkEyXkFqcGdeQXVyNTA4NzY1MzY@._V1_UY209_CR0,0,140,209_AL_.jpg">
+    </div>
+
+    <div class="movie">
+      <img  (click)="openMovie('*')" src="/assets/MV5BNWQ4MGZlZmYtZjY0MS00N2JhLWE0NmMtOTMwMTk4NDQ4NjE2XkEyXkFqcGdeQXVyNTI4MjkwNjA@._V1_UX140_CR0,0,140,209_AL_.jpg">
+    </div>
+ 
+    <div class="movie">
+      <img (click)="openMovie('*')" src="/assets/MV5BNmVkMGM0ZTQtNDQwNS00NzgwLTkwYWYtNWE3MWFiOGUwODg5XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UY209_CR0,0,140,209_AL_.jpg">
+    </div>
+
+    <div class="movie">
+      <img (click)="openMovie('*')" src="/assets/MV5BNGYyZGM5MGMtYTY2Ni00M2Y1LWIzNjQtYWUzM2VlNGVhMDNhXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UY209_CR0,0,140,209_AL_.jpg">
+    </div>
+  </div>
+
+  <p class="box-title">Les plus gros succès de Netflix</p>
+
+    <div class="scroll-box">
+      <div class="movie">
+        <img src="/assets/MV5BNGYyZGM5MGMtYTY2Ni00M2Y1LWIzNjQtYWUzM2VlNGVhMDNhXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UY209_CR0,0,140,209_AL_.jpg">
+      </div>
+  
+      <div class="movie">
+        <img src="/assets/MV5BNWQ4MGZlZmYtZjY0MS00N2JhLWE0NmMtOTMwMTk4NDQ4NjE2XkEyXkFqcGdeQXVyNTI4MjkwNjA@._V1_UX140_CR0,0,140,209_AL_.jpg">
+      </div>
+  
+      <div class="movie">
+        <img  (click)="openMovie('tt0473445')" src="/assets/tt0473445.jpg">      
+      ƒ</div>
+      <div class="movie">
+        <img src="/assets/MV5BMjMxNjY2MDU1OV5BMl5BanBnXkFtZTgwNzY1MTUwNTM@._V1_UY209_CR0,0,140,209_AL_.jpg">
+      </div>
+  
+      <div class="movie">
+        <img src="/assets/MV5BMjQ0MTgyNjAxMV5BMl5BanBnXkFtZTgwNjUzMDkyODE@._V1_UY209_CR0,0,140,209_AL_.jpg">
+      </div>
+  
+      <div class="movie">
+        <img src="/assets/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_UY209_CR0,0,140,209_AL_.jpg">
+      </div>
+  
+      <div class="movie">
+        <img src="/assets/MV5BMTMzMTc3MjA5NF5BMl5BanBnXkFtZTcwOTk3MDE5MQ@@._V1_UY209_CR1,0,140,209_AL_.jpg">
+      </div>
+  
+      <div class="movie">
+        <img src="/assets/MV5BM2IxMjFmNWEtNmEyNS00MmNmLTk5ZWYtYTY5YTA1NjgwNDFmXkEyXkFqcGdeQXVyMzY0MTE3NzU@._V1_UY209_CR3,0,140,209_AL_.jpg">
+      </div>
+  
+    </div>
 </ion-content>
